--- a/DMailDelivery.Core/DMailDelivery.Core.csproj
+++ b/DMailDelivery.Core/DMailDelivery.Core.csproj
@@ -62,14 +62,20 @@
   <ItemGroup>
     <Compile Include="Entity\Application.cs" />
     <Compile Include="Entity\Email.cs" />
+    <Compile Include="Entity\Sender.cs" />
     <Compile Include="Migrations\201507281310312_InitialCreate.cs" />
     <Compile Include="Migrations\201507281310312_InitialCreate.Designer.cs">
       <DependentUpon>201507281310312_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201507281414047_CreateSenderEntity_And_SenderService.cs" />
+    <Compile Include="Migrations\201507281414047_CreateSenderEntity_And_SenderService.Designer.cs">
+      <DependentUpon>201507281414047_CreateSenderEntity_And_SenderService.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Persistence\DataContext.cs" />
     <Compile Include="Persistence\PropertyConvention.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\EmailService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
@@ -80,6 +86,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201507281310312_InitialCreate.resx">
       <DependentUpon>201507281310312_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201507281414047_CreateSenderEntity_And_SenderService.resx">
+      <DependentUpon>201507281414047_CreateSenderEntity_And_SenderService.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
